--- a/frontend/src/components/static/css/Product.css
+++ b/frontend/src/components/static/css/Product.css
@@ -21,6 +21,10 @@
 }
 .card-contaniner{
   border: none;
+  transition: transform 0.3s ease-in-out;
+}
+.card-contaniner:hover{
+  transform: scale(1.05);
 }
   /* Style for the card description */
   .card-contaniner div:nth-child(1) {
